--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head lang="ru">
 		<meta charset="utf-8">
 		<title>Табло аэропорта Шереметьево (Москва)</title>
-		<link rel="stylesheet" href="/assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
 		<header>
