--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 						<span class="cell col-status">статус</span>
 					</div>
 					<a class="row arrival-row" href="#SU-1234">
-						<span class="cell flight-type"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell flight-type"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">SU-1234</span>
 						<span class="cell">Aeroflot</span>
-						<span class="cell"><img src="/assets/i/logo_su.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_su.png" height="15"></span>
 						<span class="cell" data-short="Ту134">Ту-134</span>
 						<span class="cell">Екатеринбург</span>
 						<span class="cell">00:05</span>
