add modul-dialog to AF-6578

--- a/index.html
+++ b/index.html
@@ -346,6 +346,41 @@
 					<a class="close-btn" href="#">Закрыть</a>
 				</div>
 			</div>
+			<div id="AF-5678" class="modal-dialog">
+				<div class="flight-data">
+
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>AF-5678</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
 		</div> <!-- eo main-layout -->
 	</body>
 </html>
