--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 						<span class="cell col-status">статус</span>
 					</div>
 					<a class="row arrival-row" href="#SU-1234">
-						<span class="cell flight-type"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell flight-type"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">SU-1234</span>
 						<span class="cell">Aeroflot</span>
-						<span class="cell"><img src="/assets/i/logo_su.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_su.png" height="15"></span>
 						<span class="cell" data-short="Ту134">Ту-134</span>
 						<span class="cell">Екатеринбург</span>
 						<span class="cell">00:05</span>
@@ -55,10 +55,10 @@
 						<span class="cell">по расписанию</span>
 					</a>
 					<a class="row departure-row" href="#AF-5678">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">AF-5678</span>
 						<span class="cell">Air France</span>
-						<span class="cell"><img src="/assets/i/logo_af.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_af.png" height="15"></span>
 						<span class="cell" data-short="A310">Airbus-310</span>
 						<span class="cell">Лондон</span>
 						<span class="cell">00:05</span>
@@ -66,10 +66,10 @@
 						<span class="cell">вылетел</span>
 					</a>
 					<a class="row departure-row" href="#VY-9999">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">VY-9999</span>
 						<span class="cell">Vueling</span>
-						<span class="cell"><img src="/assets/i/logo_vy.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_vy.png" height="15"></span>
 						<span class="cell" data-short="A310">Airbus-310</span>
 						<span class="cell">Лондон</span>
 						<span class="cell">00:05</span>
@@ -77,10 +77,10 @@
 						<span class="cell">вылетел</span>
 					</a>
 					<a class="row arrival-row" href="#SU-9101">
-						<span class="cell flight-type"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell flight-type"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">SU-9101</span>
 						<span class="cell">Aeroflot</span>
-						<span class="cell"><img src="/assets/i/logo_su.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_su.png" height="15"></span>
 						<span class="cell" data-short="Ту204">Ту-204</span>
 						<span class="cell">Владивосток</span>
 						<span class="cell">00:05</span>
@@ -88,10 +88,10 @@
 						<span class="cell">по расписанию</span>
 					</a>
 					<a class="row arrival-row" href="#SU-5161">
-						<span class="cell flight-type"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell flight-type"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">SU-5161</span>
 						<span class="cell">Aeroflot</span>
-						<span class="cell"><img src="/assets/i/logo_su.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_su.png" height="15"></span>
 						<span class="cell" data-short="ИЛ86">ИЛ-86</span>
 						<span class="cell">Новосибирск</span>
 						<span class="cell">00:10</span>
@@ -99,10 +99,10 @@
 						<span class="cell status-canceled">отменен</span>
 					</a>
 					<a class="row departure-row" href="#AF-7181">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">AF-7181</span>
 						<span class="cell">Air France</span>
-						<span class="cell"><img src="/assets/i/logo_af.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_af.png" height="15"></span>
 						<span class="cell" data-short="A310">Airbus-310</span>
 						<span class="cell">Милан</span>
 						<span class="cell">00:10</span>
@@ -110,10 +110,10 @@
 						<span class="cell">вылетел</span>
 					</a>
 					<a class="row departure-row" href="#AF-9202">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">AF-9202</span>
 						<span class="cell">Air France</span>
-						<span class="cell"><img src="/assets/i/logo_af.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_af.png" height="15"></span>
 						<span class="cell" data-short="A320">Airbus-320</span>
 						<span class="cell">Барселона</span>
 						<span class="cell">00:15</span>
@@ -121,10 +121,10 @@
 						<span class="cell status-canceled">отменен</span>
 					</a>
 					<a class="row departure-row" href="#VY-1222">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">VY-1222</span>
 						<span class="cell">Vueling</span>
-						<span class="cell"><img src="/assets/i/logo_vy.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_vy.png" height="15"></span>
 						<span class="cell" data-short="A330">Airbus-330</span>
 						<span class="cell">Мадрид</span>
 						<span class="cell">00:20</span>
@@ -132,10 +132,10 @@
 						<span class="cell">вылетел</span>
 					</a>
 					<a class="row arrival-row" href="#KL-3242">
-						<span class="cell"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">KL-3242</span>
 						<span class="cell">KLM</span>
-						<span class="cell"><img src="/assets/i/logo_klm.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_klm.png" height="15"></span>
 						<span class="cell" data-short="B737">Boeing-737</span>
 						<span class="cell">Минск</span>
 						<span class="cell">00:20</span>
@@ -143,10 +143,10 @@
 						<span class="cell">по расписанию</span>
 					</a>
 					<a class="row arrival-row" href="#KL-5262">
-						<span class="cell"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">KL-5262</span>
 						<span class="cell">KLM</span>
-						<span class="cell"><img src="/assets/i/logo_klm.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_klm.png" height="15"></span>
 						<span class="cell" data-short="B747">Boeing-747</span>
 						<span class="cell">Киев</span>
 						<span class="cell">00:25</span>
@@ -154,10 +154,10 @@
 						<span class="cell">по расписанию</span>
 					</a>
 					<a class="row departure-row" href="#AZ-7282">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">AZ-7282</span>
 						<span class="cell">AlItalia</span>
-						<span class="cell"><img src="/assets/i/logo_az.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_az.png" height="15"></span>
 						<span class="cell" data-short="B767">Boeing-767</span>
 						<span class="cell">Махачкала</span>
 						<span class="cell">00:25</span>
@@ -165,10 +165,10 @@
 						<span class="cell status-canceled">отменен</span>
 					</a>
 					<a class="row departure-row" href="#VY-9303">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">VY-9303</span>
 						<span class="cell">Vueling</span>
-						<span class="cell"><img src="/assets/i/logo_vy.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_vy.png" height="15"></span>
 						<span class="cell" data-short="B777">Boeing-777</span>
 						<span class="cell">Уфа</span>
 						<span class="cell">00:25</span>
@@ -176,10 +176,10 @@
 						<span class="cell">вылетел</span>
 					</a>
 					<a class="row departure-row" href="#LH-1323">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">LH-1323</span>
 						<span class="cell">Lufthansa</span>
-						<span class="cell"><img src="/assets/i/logo_lh.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_lh.png" height="15"></span>
 						<span class="cell" data-short="A310">Airbus-310</span>
 						<span class="cell">Сочи</span>
 						<span class="cell">00:30</span>
@@ -187,10 +187,10 @@
 						<span class="cell">посадка закончена</span>
 					</a>
 					<a class="row arrival-row" href="#SU-3343">
-						<span class="cell flight-type"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell flight-type"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">SU-3343</span>
 						<span class="cell">Aeroflot</span>
-						<span class="cell"><img src="/assets/i/logo_su.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_su.png" height="15"></span>
 						<span class="cell" data-short="A320">Airbus-320</span>
 						<span class="cell">Санкт-Петербург</span>
 						<span class="cell">00:30</span>
@@ -198,10 +198,10 @@
 						<span class="cell">задерживается до 00:50</span>
 					</a>
 					<a class="row arrival-row" href="#LH-5363">
-						<span class="cell flight-type"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell flight-type"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">LH-5363</span>
 						<span class="cell">Lufthansa</span>
-						<span class="cell"><img src="/assets/i/logo_lh.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_lh.png" height="15"></span>
 						<span class="cell" data-short="A320">Airbus-320</span>
 						<span class="cell">Санкт-Петербург</span>
 						<span class="cell">00:30</span>
@@ -209,10 +209,10 @@
 						<span class="cell">задерживается до 00:50</span>
 					</a>
 					<a class="row departure-row" href="#AZ-7383">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">AZ-7383</span>
 						<span class="cell">AlItalia</span>
-						<span class="cell"><img src="/assets/i/logo_az.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_az.png" height="15"></span>
 						<span class="cell" data-short="B747">Boeing-747</span>
 						<span class="cell">Сочи</span>
 						<span class="cell">00:30</span>
@@ -220,10 +220,10 @@
 						<span class="cell">посадка закончена</span>
 					</a>
 					<a class="row departure-row" href="#LH-9404">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">LH-9404</span>
 						<span class="cell">Lufthansa</span>
-						<span class="cell"><img src="/assets/i/logo_lh.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_lh.png" height="15"></span>
 						<span class="cell" data-short="B767">Boeing-767</span>
 						<span class="cell">Хабаровск</span>
 						<span class="cell">00:35</span>
@@ -231,10 +231,10 @@
 						<span class="cell">регистрация</span>
 					</a>
 					<a class="row departure-row" href="#LH-1424">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">LH-1424</span>
 						<span class="cell">Lufthansa</span>
-						<span class="cell"><img src="/assets/i/logo_lh.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_lh.png" height="15"></span>
 						<span class="cell" data-short="B777">Boeing-777</span>
 						<span class="cell">Хабаровск</span>
 						<span class="cell">00:35</span>
@@ -242,10 +242,10 @@
 						<span class="cell">регистрация</span>
 					</a>
 					<a class="row departure-row" href="#VY-3444">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">VY-3444</span>
 						<span class="cell">Vueling</span>
-						<span class="cell"><img src="/assets/i/logo_vy.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_vy.png" height="15"></span>
 						<span class="cell" data-short="A300">Airbus-300</span>
 						<span class="cell">Владивосток</span>
 						<span class="cell">00:40</span>
@@ -253,10 +253,10 @@
 						<span class="cell">ожидание посадки</span>
 					</a>
 					<a class="row departure-row" href="#AZ-7484">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">AZ-7484</span>
 						<span class="cell">AlItalia</span>
-						<span class="cell"><img src="/assets/i/logo_az.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_az.png" height="15"></span>
 						<span class="cell" data-short="A320">Airbus-320</span>
 						<span class="cell">Париж</span>
 						<span class="cell">00:50</span>
@@ -264,10 +264,10 @@
 						<span class="cell">ожидание посадки</span>
 					</a>
 					<a class="row arrival-row" href="#SU-9505">
-						<span class="cell flight-type"><img src="/assets/i/arrival_ico.png" width="32" height="32"></span>
+						<span class="cell flight-type"><img src="assets/i/arrival_ico.png" width="32" height="32"></span>
 						<span class="cell">SU-9505</span>
 						<span class="cell">Aeroflot</span>
-						<span class="cell"><img src="/assets/i/logo_su.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_su.png" height="15"></span>
 						<span class="cell" data-short="A330">Airbus-330</span>
 						<span class="cell">Мадрид</span>
 						<span class="cell">00:55</span>
@@ -275,10 +275,10 @@
 						<span class="cell">летит</span>
 					</a>
 					<a class="row departure-row" href="#LH-0515">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">LH-0515</span>
 						<span class="cell">Lufthansa</span>
-						<span class="cell"><img src="/assets/i/logo_lh.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_lh.png" height="15"></span>
 						<span class="cell" data-short="A330">Airbus-330</span>
 						<span class="cell">Мадрид</span>
 						<span class="cell">00:55</span>
@@ -286,10 +286,10 @@
 						<span class="cell">ожидание посадки</span>
 					</a>
 					<a class="row departure-row" href="#LH-2535">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">LH-2535</span>
 						<span class="cell">Lufthansa</span>
-						<span class="cell"><img src="/assets/i/logo_lh.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_lh.png" height="15"></span>
 						<span class="cell" data-short="A310">Airbus-310</span>
 						<span class="cell">Лондон</span>
 						<span class="cell">00:55</span>
@@ -297,10 +297,10 @@
 						<span class="cell">задерживается до 01:50</span>
 					</a>
 					<a class="row departure-row" href="#LH-8888">
-						<span class="cell"><img src="/assets/i/departure_ico.png" width="32" height="32"></span>
+						<span class="cell"><img src="assets/i/departure_ico.png" width="32" height="32"></span>
 						<span class="cell">LH-8888</span>
 						<span class="cell">Lufthansa</span>
-						<span class="cell"><img src="/assets/i/logo_lh.png" height="15"></span>
+						<span class="cell"><img src="assets/i/logo_lh.png" height="15"></span>
 						<span class="cell" data-short="A320">Airbus-320</span>
 						<span class="cell">Париж</span>
 						<span class="cell">00:55</span>
