--- a/index.html
+++ b/index.html
@@ -313,7 +313,6 @@
 			<!-- Model-dialog with full flight information -->
 			<div id="SU-1234" class="modal-dialog">
 				<div class="flight-data">
-
 					<div class="dlg-title">
 						Информация о рейсе
 						<span>SU-1234</span>
@@ -348,10 +347,757 @@
 			</div>
 			<div id="AF-5678" class="modal-dialog">
 				<div class="flight-data">
-
 					<div class="dlg-title">
 						Информация о рейсе
 						<span>AF-5678</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="VY-9999" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>VY-9999</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="SU-9101" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>SU-9101</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="SU-5161" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>SU-5161</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="AF-7181" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>AF-7181</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="AF-9202" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>AF-9202</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="VY-1222" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>VY-1222</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="KL-3242" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>KL-3242</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="KL-5262" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>KL-5262</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="AZ-7282" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>AZ-7282</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="VY-9303" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>VY-9303</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="LH-1323" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>LH-1323</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="SU-3343" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>SU-3343</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="LH-5363" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>LH-5363</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="AZ-7383" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>AZ-7383</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="LH-9404" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>LH-9404</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="LH-1424" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>LH-1424</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="VY-3444" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>VY-3444</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="AZ-7484" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>AZ-7484</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="SU-9505" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>SU-9505</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="LH-0515" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>LH-0515</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="LH-2535" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>LH-2535</span>
+					</div>
+					<table>
+						<tr>
+							<td>Тип: </td>
+							<td>вылет</td>
+						</tr>
+						<tr>
+							<td>Выполняющая авиакомпания: </td>
+							<td>Aeroflot</td>
+						</tr>
+							<td>Тип воздушного судна: </td>
+							<td>Ту-134</td>
+						</tr>
+						<tr>
+							<td>Аэропорт вылета/ прилета: </td>
+							<td>Екатеринбург</td>
+						</tr>
+						</tr>
+							<td>Время по расписанию: </td>
+							<td>00:00</td>
+						</tr>
+						</tr>
+							<td>Статус: </td>
+							<td class="notice">по расписанию</td>
+						</tr>
+					</table>
+					<a class="close-btn" href="#">Закрыть</a>
+				</div>
+			</div>
+			<div id="LH-8888" class="modal-dialog">
+				<div class="flight-data">
+					<div class="dlg-title">
+						Информация о рейсе
+						<span>LH-8888</span>
 					</div>
 					<table>
 						<tr>
