--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Табло аэропорта Шереметьево (Москва)</title>
 		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="icon" href="assets/i/favicon.ico">
 	</head>
 	<body>
 		<header>
@@ -320,7 +321,7 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
@@ -335,7 +336,7 @@
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:05</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
@@ -358,22 +359,26 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Air France</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-310</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Лондон</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:05</td>
+						</tr>
+						</tr>
+							<td>Примечание: </td>
+							<td>код шеринг VY-9999</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">вылетел</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -392,22 +397,26 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Vueling</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-310</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Лондон</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:05</td>
+						</tr>
+						</tr>
+							<td>Примечание: </td>
+							<td>код шеринг AF-5678</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">вылетел</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -422,22 +431,22 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
 							<td>Aeroflot</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Ту-204</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Владивосток</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:05</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
@@ -456,26 +465,26 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
 							<td>Aeroflot</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>ИЛ-86</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Новосибирск</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:10</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">отменен</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -494,22 +503,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Air France</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-310</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Милан</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:10</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">вылетел</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -528,22 +537,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Air France</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-320</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Барселона</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:15</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">отменен</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -562,22 +571,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Vueling</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-330</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Мадрид</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:20</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">вылетел</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -592,22 +601,22 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>KLM</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Boeing-737</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Минск</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:20</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
@@ -626,22 +635,22 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>KLM</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Boeing-747</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Киев</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:25</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
@@ -664,22 +673,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>AlItalia</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Boeing-767</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Махачкала</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:25</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">отменен</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -698,22 +707,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Vueling</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Boeing-777</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Уфа</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:25</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">вылетел</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -732,22 +741,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Lufthansa</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-310</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Сочи</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:30</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">посадка закончена</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -762,26 +771,30 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
 							<td>Aeroflot</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-320</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Санкт-Петербург</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:30</td>
+						</tr>
+						</tr>
+							<td>Примечание: </td>
+							<td>код шеринг LH-5363</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">задерживается до 00:50</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -796,26 +809,30 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Lufthansa</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-320</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Санкт-Петербург</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:30</td>
+						</tr>
+						</tr>
+							<td>Примечание: </td>
+							<td>код шеринг SU-3343</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">задерживается до 00:50</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -834,22 +851,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>AlItalia</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Boeing-747</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Сочи</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:30</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">посадка закончена</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -868,22 +885,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Lufthansa</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Boeing-767</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Хабаровск</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:35</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">регистрация</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -902,22 +919,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Lufthansa</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Boeing-777</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Хабаровск</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:35</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">регистрация</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -936,22 +953,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Vueling</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-300</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Владивосток</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:40</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">ожидание посадки</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -970,22 +987,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>AlItalia</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-320</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Париж</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:50</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">ожидание посадки</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -1000,26 +1017,26 @@
 					<table>
 						<tr>
 							<td>Тип: </td>
-							<td>вылет</td>
+							<td>прилет</td>
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
 							<td>Aeroflot</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-330</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Мадрид</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:55</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">летит</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -1038,22 +1055,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Lufthansa</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-330</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Мадрид</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:55</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">ожидание посадки</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -1072,22 +1089,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Lufthansa</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-310</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Лондон</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:55</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">задерживается до 01:50</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -1106,22 +1123,22 @@
 						</tr>
 						<tr>
 							<td>Выполняющая авиакомпания: </td>
-							<td>Aeroflot</td>
+							<td>Lufthansa</td>
 						</tr>
 							<td>Тип воздушного судна: </td>
-							<td>Ту-134</td>
+							<td>Airbus-320</td>
 						</tr>
 						<tr>
 							<td>Аэропорт вылета/ прилета: </td>
-							<td>Екатеринбург</td>
+							<td>Париж</td>
 						</tr>
 						</tr>
 							<td>Время по расписанию: </td>
-							<td>00:00</td>
+							<td>00:55</td>
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">по расписанию</td>
+							<td class="notice">приземлился</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
