new notice style for state of flight

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">отменен</td>
+							<td class="notice-wrn">отменен</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -552,7 +552,7 @@
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">отменен</td>
+							<td class="notice-wrn">отменен</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
@@ -688,7 +688,7 @@
 						</tr>
 						</tr>
 							<td>Статус: </td>
-							<td class="notice">отменен</td>
+							<td class="notice-wrn">отменен</td>
 						</tr>
 					</table>
 					<a class="close-btn" href="#">Закрыть</a>
